--- a/wp-content/themes/ashe/assets/css/font-awesome.css
+++ b/wp-content/themes/ashe/assets/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.eot?v=4.7.0');
-  src: url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.eot#iefix&v=4.7.0') format('embedded-opentype'), url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.eot?v=4.7.0');
+  src: url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.eot#iefix&v=4.7.0') format('embedded-opentype'), url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
