--- a/wp-content/themes/ashe/assets/css/fontello.css
+++ b/wp-content/themes/ashe/assets/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.eot?54916726');
-  src: url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.eot?54916726#iefix') format('embedded-opentype'),
-       url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.woff2?54916726') format('woff2'),
-       url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.woff?54916726') format('woff'),
-       url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.ttf?54916726') format('truetype'),
-       url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.svg?54916726#con-left-open-big') format('svg');
+  src: url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.eot?54916726');
+  src: url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.eot?54916726#iefix') format('embedded-opentype'),
+       url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.woff2?54916726') format('woff2'),
+       url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.woff?54916726') format('woff'),
+       url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.ttf?54916726') format('truetype'),
+       url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/fonts/fontello.svg?54916726#con-left-open-big') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'con-left-open-big';
-    src: url('http://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/font/con-left-open-big.svg?54916726#con-left-open-big') format('svg');
+    src: url('https://nguyen-hieu-nmh.github.io/Minh-Hieu/wp-content/themes/ashe/assets/font/con-left-open-big.svg?54916726#con-left-open-big') format('svg');
   }
 }
 */
